--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "app.js",
   "scripts": {
-    "start": "node app",
+    "start": "nodemon  app",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
